--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "ts-node index.ts"
+    "start": "ts-node src/index.ts",
+    "get-refresh-token": "ts-node scripts/get-refresh-token.ts"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   "homepage": "https://github.com/coltonb/discord-spotify-bot#readme",
   "dependencies": {
     "@types/node": "^20.4.4",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "linkifyjs": "^4.1.1",
@@ -27,7 +28,9 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "express": "^4.18.2",
     "ts-jest": "^29.1.1"
   }
 }
